<resources>
    <string name="app_name">安全无忧</string>
    <string name="popu_text">当前帐号没有设备 , 请添加设备</string>
    <string name="dialog_Exit">确定退出吗？</string>
    <string name="btnExit">退出</string>
    <string name="btnCancel">取消</string>
    <string name="btnRunInBackground">背景执行</string>
    <string name="dialog_quit">正在退出&#8230;</string>
    <string name="dialog_wait">请稍等&#8230;</string>
    <string name="dialog_deleting">正在删除&#8230;</string>
    <string name="dialog_delete_alert">提示</string>
    <string name="dialog_delete_record">确认删除该录像吗？</string>
    <string name="dialog_submit">确定</string>
    <string name="dialog_cancel">取消</string>
    <string name="dialog_loading">正在加载数据中请等待&#8230;</string>
    <string name="dialog_updating">正在更新数据&#8230;</string>
    <string name="dialog_delete_picture">确认删除该图片吗？</string>
    <string name="dialog_delete_local_picture">确认删除该摄像机的本地图片吗？</string>
    <string name="toast_connect_fail">摄像机未连接</string>
    <string name="toast_play_fail">抱歉该录像不能播放</string>
    <string name="toast_record_no">未找到任何记录</string>
    <string name="toast_play_stop">播放停止</string>
    <string name="toast_loading_resource">正在加载资源&#8230;</string>
    <string name="toast_loading_resource_error">资源加载出错</string>
    <string name="toast_loading_page">请稍后&#8230;</string>
    <string name="toast_phone_error">网络异常</string>
    <string name="toast_net_error">网络出错，请检查网络</string>
    <string name="eventrecord_activity_title">事件录像</string>
    <string name="localrecord_activity_title">本地录像</string>
    <string name="alarmset_activity_title">报警设置</string>
    <string name="alarmset_activity_connect_fail">摄像机未连接</string>
    <string name="listfragment_connect_fail">设备未联机&#8230;</string>
    <string name="listfragment_delete_alert">提示框</string>
    <string name="listfragment_delete_msg">确认删除该摄像机？</string>
    <string name="listfragment_submit">确定</string>
    <string name="listfragment_cancel">取消</string>
    <string name="listfragment_title">摄像机列表</string>
    <string name="listfragment_input_password">请输入正确的密码</string>
    <string name="morefragment_title">更多</string>
    <string name="replayfragment_title">事件</string>
    <string name="camrecord_activty_title">远程录像</string>
    <string name="localrecord_activty_title">本地录像</string>
    <string name="playback_activty_title">录像文件</string>
    <string name="recordrepaly_activty_title">本地录像回放</string>
    <string name="aboutus_activty_title">关于我们</string>
    <string name="forgetpassword_activty_title">忘记密码</string>
    <string name="helpweb_activty_title">怎么用？</string>
    <string name="normalquestion_activty_title">常见问题</string>
    <string name="addcam_activty_input_dev_name">名称&#058;</string>
    <string name="addcam_activty_input_dev_name_hint">请输入设备名称</string>
    <string name="addcam_activty_input_dev_uid">UID&#058;</string>
    <string name="addcam_activty_input_dev_uid_hint">请输入20位UID</string>
    <string name="addcam_activty_input_dev_password">密码&#058;</string>
    <string name="addcam_activty_input_dev_password_hint">初始密码root</string>
    <string name="addcam_activty_dev_exsist">摄像机已存在</string>
    <string name="addcam_activty_add_success">摄像机添加成功</string>
    <string name="addcam_activty_add_dev">添加摄像机</string>
    <string name="camipset_activity_notnull">不能配置空参数</string>
    <string name="camipset_activity_title">网络配置</string>
    <string name="demo_activity_title">用户体验区</string>
    <string name="login_cativity_input_phone">请输入用户名</string>
    <string name="login_cativity_input_password">请输入密码</string>
    <string name="login_cativity_login">正在登录&#8230;</string>
    <string name="parameterset_activity_title">参数设置</string>
    <string name="parameterset_activity_complete">完成</string>
    <string name="parameterset_activity_motion">移动侦测</string>
    <string name="parameterset_ipset">网络配置</string>
    <string name="parameterset_activity_event_notification">事件通知</string>
    <string name="parameterset_activity_record_mode">录像模式</string>
    <string name="parameterset_activity_dev_info">摄像机信息</string>
    <string name="parameterset_activity_video_quility">视频质量</string>
    <string name="parameterset_activity_video_flip">画面翻转</string>
    <string name="parameterset_activity_env_mode">环境模式</string>
    <string name="camera_info_title">摄像机信息</string>
    <string name="camera_info_name">名称</string>
    <string name="camera_info_uid">UID</string>
    <string name="camera_info_ip">IP地址</string>
    <string name="camera_info_reboot">重启</string>
    <string name="camera_info_default">恢复出厂默认</string>
    <string name="camera_info_voice">语音提示</string>
    <string name="update_password_title">修改密码</string>
    <string name="update_password_old">原密码</string>
    <string name="update_password_old_hint">原密码</string>
    <string name="update_password_new">新密码</string>
    <string name="update_password_new_hint">新密码</string>
    <string name="update_password_confirm">确认密码</string>
    <string name="update_password_confirm_hint">确认密码</string>
    <string name="wifi_manager_title1">Wi-Fi列表</string>
    <string name="wifi_manager_lable_search">搜索中&#8230;</string>
    <string name="wifi_manager_lable_reboot">等待设备重启，剩余时间&#8230;</string>
    <string name="wifi_manager_password_title">输入密码</string>
    <string name="wifi_manager_password_success">设置成功</string>
    <string name="wifi_manager_password_fail">设置失败</string>
    <string name="wifi_manager_password_label">密码&#160;&#058;</string>
    <string name="wifi_manager_password_hint">Wi-fi密码</string>
    <string name="register_activity_submit_password">确认密码</string>
    <string name="register_activity_vil_phone">用户名</string>
    <string name="register_activity_long_pwd">密码</string>
    <string name="register_activity_same_pwd">确认密码</string>
    <string name="register_activity_registe_success">注册成功</string>
    <string name="searchlist_activity_title">搜索列表</string>
    <string name="searchlist_activity_searching">搜索中&#8230;</string>
    <string name="live_activity_record">录像</string>
    <string name="live_activity_record_stop">停止&#8230;</string>
    <string name="live_activity_recording">录像中&#8230;</string>
    <string name="live_activity_sp_fail">抓拍失败</string>
    <string name="live_activity_sp_success">图片已保存</string>
    <string name="live_activity_sp_sd">无SD卡</string>
    <string name="live_activity_title">视频直播</string>
    <string name="live_activity_control_closed">云台控制关闭</string>
    <string name="live_activity_control_open">云台控制开启</string>
    <string name="live_activity_listen">监听</string>
    <string name="live_activity_speak">对讲</string>
    <string name="record_mode_closed">无</string>
    <string name="record_mode_full">全天录像</string>
    <string name="record_mode_alarm">报警录像</string>
    <string name="event_notification_quiet">静音</string>
    <string name="event_notification_ring">响铃</string>
    <string name="event_notification_shock">振动</string>
    <string name="event_notification_ring_shock">响铃及振动</string>
    <string name="video_quakity_highest">最高</string>
    <string name="video_quakity_high">高</string>
    <string name="video_quakity_middle">中</string>
    <string name="video_quakity_lower">低</string>
    <string name="video_quakity_lowest">最低</string>
    <string name="video_flip_normal">正常</string>
    <string name="video_flip_vertical">垂直翻转</string>
    <string name="video_flip_horizontal">水平翻转(镜像)</string>
    <string name="video_flip_vertical_horizontal">垂直及水平翻转</string>
    <string name="environment_mode_indoor50">室内模式(50hz)</string>
    <string name="environment_mode_indoor">室内模式(60hz)</string>
    <string name="environment_mode_outdoor_mode">室外模式</string>
    <string name="environment_mode_night">夜间模式</string>
    <string name="motion_detection_closed">关闭</string>
    <string name="motion_detection_lower">低</string>
    <string name="motion_detection_middle">中</string>
    <string name="motion_detection_high">高</string>
    <string name="motion_detection_highest">最高</string>
    <string name="ipset_name">设备名称</string>
    <string name="ipset_ip">IP地址</string>
    <string name="ipset_port">HTTP端口</string>
    <string name="ipset_edit">编辑</string>
    <string name="ipset_search">搜索</string>
    <string name="ipset_title">新数据</string>
    <string name="ipset_camname">设备名称&#058;</string>
    <string name="ipset_camip">IP地址&#058;</string>
    <string name="ipset_camport">HTTP端口&#058;</string>
    <string name="ipset_cammac">MAC地址&#058;</string>
    <string name="ipset_camgate">网关&#058;</string>
    <string name="ipset_camcode">子网掩码&#058;</string>
    <string name="ipset_camdns1">主DNS&#058;</string>
    <string name="ipset_camdns2">副DNS&#058;</string>
    <string name="ipset_camrtsp">RTSP端口&#058;</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>
    <string name="none">无</string>
    <string name="close">关闭</string>
    <string name="ignore">忽略</string>
    <string name="ntfAppRunning">%s 正在执行中&#8230;</string>
    <string name="ntfIncomingEvent">从 %s 接收事件警示</string>
    <string name="ntfIncomingMultipleEvent">新进事件，共 %d 摄影机</string>
    <string name="ntfCameraRunning">摄影机联机中 (%d)</string>
    <string name="ntfLastEventIs">新进事件: %s</string>
    <string name="ntfLastEventFrom">新进事件: %s</string>
    <string name="evttype_all">全部</string>
    <string name="evttype_motion_detection">移动侦测</string>
    <string name="evttype_video_lost">视频中断</string>
    <string name="evttype_io_alarm">I/O报警</string>
    <string name="evttype_io_pir">感应报警</string>
    <string name="evttype_od">遮挡报警</string>
    <string name="evttype_rs232_open">开门成功</string>
    <string name="evttype_rs232">门铃被按</string>
    <string name="evttype_motion_pass">移动侦测</string>
    <string name="evttype_video_resume">视频恢复</string>
    <string name="evttype_io_alarm_pass">I/O报警</string>
    <string name="evttype_expt_reboot">系统异常重启</string>
    <string name="evttype_sd_fault">SD卡错误</string>
    <string name="evttype_fulltime_recording">全时录像</string>
    <string name="tips_warning">警告</string>
    <string name="tips_all_field_can_not_empty">请输入所有选项。</string>
    <string name="tips_old_password_is_wrong">旧密码输入错误。</string>
    <string name="tips_new_passwords_do_not_match">输入的新密码不一致。</string>
    <string name="tips_modify_security_code_ok">密码修改成功后，摄像机稍后会重新连接。</string>
    <string name="tips_wifi_retrieving">获取中&#8230;</string>
    <string name="tips_wifi_connecting">连接中&#8230;</string>
    <string name="tips_wifi_connected">已连接</string>
    <string name="tips_wifi_disconnect">未连接</string>
    <string name="tips_wifi_wrongpassword">密码错误</string>
    <string name="tips_wifi_ready">已准备</string>
    <string name="tips_wifi_weak_signal">已连接 (讯号微弱)</string>
    <string name="tips_wifi_connect_failed">未连上网络.</string>
    <string name="tips_no_sdcard">您的手机未安装SD卡。</string>
    <string name="menu_login">登录</string>
    <string name="menu_more">更多</string>
    <string name="register_register">注册</string>
    <string name="register_cancel">取消</string>
    <string name="register_telephone">手机号</string>
    <string name="register_pwd">密码</string>
    <string name="register_rempwd">确认密码</string>
    <string name="alertset_time_0">日</string>
    <string name="alertset_time_1">一</string>
    <string name="alertset_time_2">二</string>
    <string name="alertset_time_3">三</string>
    <string name="alertset_time_4">四</string>
    <string name="alertset_time_5">五</string>
    <string name="alertset_time_6">六</string>
    <string name="alertset_time_close">关闭</string>
    <string name="alertset_email_server">邮件服务器:</string>
    <string name="alertset_email_server_address">smtp.qq.com</string>
    <string name="alertset_email_sender">发送E-mail地址:</string>
    <string name="alertset_email_receiver">接收E-mail地址:</string>
    <string name="alertset_email_username">用户名:</string>
    <string name="alertset_email_password">密码&#058;</string>
    <string name="alertset_email_check">是否需要验证&#058;</string>
    <string name="alertset_email_ssladd">是否使用 SSL加密&#058;</string>
</resources>