<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#f5f0ed"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <freelancer.worldvideo.view.TitleView
        android:id="@+id/alarm_plan_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:layout_marginLeft="5dip"
        android:layout_marginRight="5dip"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/day_time_s"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left|center_vertical"
            android:text="@string/alertset_time_close"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/week_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left|center_vertical"
            android:text="@string/alertset_time_0"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/week_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left|center_vertical"
            android:text="@string/alertset_time_1"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/week_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left|center_vertical"
            android:text="@string/alertset_time_2"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/week_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left|center_vertical"
            android:text="@string/alertset_time_3"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/week_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left|center_vertical"
            android:text="@string/alertset_time_4"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/week_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left|center_vertical"
            android:text="@string/alertset_time_5"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/week_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left|center_vertical"
            android:text="@string/alertset_time_6"
            android:textSize="16sp" />
    </LinearLayout>

    <ListView
        android:id="@+id/week_day"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dip"
        android:layout_marginLeft="5dip"
        android:layout_marginRight="5dip" >
    </ListView>

</LinearLayout>