<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EDF0F5"
    android:orientation="vertical" >
      <freelancer.worldvideo.view.TitleView
        android:id="@+id/update_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="50dip"
          android:layout_marginTop="20dip"
          android:layout_marginLeft="20dip"
          android:layout_marginRight="20dip"
          android:gravity="center_vertical"
          android:background="@drawable/list_2" >

          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:gravity="center_vertical|right"
              android:textSize="16sp"
              android:layout_marginLeft="20dip"
              android:text="@string/update_password_old" />

          <EditText
              android:id="@+id/old_password"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:background="#00000000"
              android:layout_marginLeft="20dip"
              android:textSize="14sp"
              android:hint="@string/update_password_old_hint"
              android:inputType="textPassword" />


      </LinearLayout>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="50dip"
          android:layout_marginLeft="20dip"
          android:layout_marginRight="20dip"
          android:gravity="center_vertical"
          android:background="@drawable/list_2" >

          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:gravity="center_vertical|right"
              android:textSize="16sp"
              android:layout_marginLeft="20dip"
              android:text="@string/update_password_new" />

          <EditText
              android:id="@+id/new_password"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="#00000000"
              android:layout_marginLeft="20dip"
              android:textSize="14sp"
              android:hint="@string/update_password_new_hint"
              android:inputType="textPassword" />


      </LinearLayout>
      
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="50dip"
          android:layout_marginLeft="20dip"
          android:layout_marginRight="20dip"
          android:gravity="center_vertical"
          android:background="@drawable/list_2" >

          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:gravity="center_vertical|right"
              android:textSize="16sp"
              android:layout_marginLeft="20dip"
              android:text="@string/update_password_confirm" />

          <EditText
              android:id="@+id/confirm_password"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="#00000000"
              android:layout_marginLeft="20dip"
              android:textSize="14sp"
              android:hint="@string/update_password_confirm_hint"
              android:inputType="textPassword" />


      </LinearLayout>

</LinearLayout>
