<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dip"
        android:gravity="center"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/register_username"
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:background="@drawable/reg_input_bg"
            android:hint="@string/register_telephone"
            android:paddingLeft="20dip"
            android:paddingRight="0dip"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff"
            android:textSize="14sp" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/register_pwd"
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:background="@drawable/reg_input_bg"
            android:hint="@string/register_pwd"
            android:inputType="textPassword"
            android:paddingLeft="20dip"
            android:paddingRight="0dip"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/register_repwd"
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:background="@drawable/reg_input_bg"
            android:hint="@string/register_rempwd"
            android:inputType="textPassword"
            android:paddingLeft="20dip"
            android:paddingRight="0dip"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_marginTop="10dip"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/register_register"
            android:layout_width="wrap_content"
            android:layout_height="50dip"
            android:layout_weight="1"
            android:background="@drawable/register_seletor"
            android:scaleType="fitStart"
            android:text="@string/register_register"
            android:textColor="#ffffff"
            android:textSize="16sp" />

        <Button
            android:id="@+id/register_cancel"
            android:layout_width="wrap_content"
            android:layout_height="50dip"
            android:layout_marginLeft="5dip"
            android:layout_weight="1"
            android:background="@drawable/register_seletor"
            android:scaleType="fitStart"
            android:text="@string/register_cancel"
            android:textColor="#ffffff"
            android:textSize="16sp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@drawable/bg_menu"
            android:gravity="center"
            android:paddingTop="5dip"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/menu_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#00000000"
                android:drawableTop="@drawable/menu_login"
                android:text="@string/menu_login"
                android:textColor="#ffffff"
                android:textSize="16sp" />
			
            <Button
                android:id="@+id/menu_associated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#00000000"
                android:drawableTop="@drawable/menu_more"
                android:text="@string/menu_more"
                android:textColor="#ffffff"
                android:visibility="gone" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>