<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="100dip"
            android:layout_height="30dip"
            android:background="@drawable/table_line1"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/ipset_name"
            android:textColor="#7d7d7d"
            android:textSize="14sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="30dip"
            android:background="@drawable/verticalline" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="30dip"
            android:layout_weight="1"
            android:background="@drawable/table_line1"
            android:gravity="center"
            android:text="@string/ipset_ip"
            android:textColor="#7d7d7d"
            android:textSize="14sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="30dip"
            android:background="@drawable/verticalline" />

        <TextView
            android:layout_width="100dip"
            android:layout_height="30dip"
            android:background="@drawable/table_line1"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/ipset_port"
            android:textColor="#7d7d7d"
            android:textSize="14sp" />
    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/line" />

</LinearLayout>